首页的暗黑模式

--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -24,6 +24,32 @@
     --where-button-option: 1;
     --where-button-color: rgba(21, 28, 26, 0.9);
 
+    --circles-bg: #fffefb;
+    --circles-border: rgba(21, 28, 26, 0.1);
+    --circles-bg-round: #fffefb;
+    --circles-bg-round1: rgba(247, 247, 244, 1);
+    --circles-point: rgba(21, 28, 26, 0.9);
+
+
+    --Utility-text-color: #151c1a;
+    --Utility-title-color: rgba(21, 28, 26, 0.9);
+    --Utility-item-img: linear-gradient(97deg,
+            #f1f7f6 40%,
+            rgba(164, 229, 221, 0.2) 100.1%);
+
+    --Utility-item-border: none;
+    --Utility-item-text: rgba(21, 28, 26, 0.7);
+
+    --swiper-icon-color: #000;
+    --swiper-time-color: #151c1a;
+    --swiper-prev-bg: rgba(21, 28, 26, 0.9);
+    --swiper-prev-disabled-bg: #fff;
+    --swiper-shadow-left: #fff;
+    --swiper-shadow-left1: rgba(255, 255, 255, 0);
+    --swiper-text-color: #151C1A;
+    --swiper-text-color1: #151C1A;
+
+    --Contribute-lighter-box-shadow: 0px 1px 1px 1px #dfe7e6 inset;
 }
 
 /* 暗色主题样式 */
@@ -48,4 +74,29 @@
     --where-button-shadow: rgba(255, 254, 251, 1);
     --where-button-border: none;
     --where-button-color: rgba(255, 255, 255, 0.5);
+
+    --circles-bg: linear-gradient(227deg, rgba(62, 223, 207, 0.5) 14.49%, rgba(62, 223, 207, 0.00) 85.52%);
+    --circles-border: #3EDFCF;
+    --circles-bg-round: rgba(255, 255, 255, 0);
+    --circles-bg-round1: rgba(255, 255, 255, 0);
+    --circles-point: #fff;
+
+    --Utility-text-color: rgba(255, 255, 255, 0.8);
+    --Utility-title-color: #3EDFCF;
+    --Utility-item-img: none;
+    --Utility-item-border: 1px solid #38dac4;
+    --Utility-item-text: rgba(255, 255, 255, 0.7);
+
+
+
+    --swiper-icon-color: rgba(106, 209, 197, 1);
+    --swiper-time-color: rgba(255, 255, 255, 0.8);
+    --swiper-prev-bg: rgba(255, 255, 255, 0.4);
+    --swiper-prev-disabled-bg: rgba(255, 255, 255, 0.2);
+    --swiper-shadow-left: rgba(10, 10, 10, 0.80);
+    --swiper-shadow-left1: rgba(10, 10, 10, 0.07);
+    --swiper-text-color: rgba(62, 223, 207, 1);
+    --swiper-text-color1: rgba(255, 255, 255, 0.8);
+
+    --Contribute-lighter-box-shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
 }
