--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -50,6 +50,19 @@
     --swiper-text-color1: #151C1A;
 
     --Contribute-lighter-box-shadow: 0px 1px 1px 1px #dfe7e6 inset;
+    --app-footer-right_text-hover: rgba(255, 255, 255, 1);
+
+
+
+    //! 底部导航栏
+    --app-footer-bgc: #f6f9f9;
+    --app-footer-underline: rgba(28, 21, 21, 0.9);
+    --app-footer-right_text: rgba(21, 28, 26, 0.9);
+    --app-footer-right_text-hover: rgba(21, 28, 26, 0.9);
+    --app-footer-social-brightness: brightness(0%);
+    --app-footer-social-opacity: 0.17;
+
+
 }
 
 /* 暗色主题样式 */
@@ -99,4 +112,14 @@
     --swiper-text-color1: rgba(255, 255, 255, 0.8);
 
     --Contribute-lighter-box-shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
+
+
+    //! 底部导航栏
+    --app-footer-bgc: #1B1B1B;
+    --app-footer-underline: rgba(255, 255, 255, 0.8);
+    --app-footer-right_text: rgba(255, 255, 255, 0.6);
+    --app-footer-right_text-hover: rgba(255, 255, 255, 1);
+    --app-footer-social-brightness: brightness(100%);
+    --app-footer-social-opacity: 1;
+
 }
