--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -30,7 +30,7 @@
 .dark-theme {
     --background-color: #0c0c0c;
 
-    --text-color: #ffffff;
+    --text-color: #FFFEFB;
 
     --link-color: #0094ff;
 
