--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -198,7 +198,7 @@ ul {
 
 
 .text_style_top {
-    color: var(--Light-dark, rgba(21, 28, 26, 0.9));
+    color: var(--text-color);
     font-family: Lantinghei SC;
     font-size: 15px;
     font-style: normal;
