--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -31,12 +31,19 @@
     --circles-point: rgba(21, 28, 26, 0.9);
 
 
+    --data-amount-color: rgba(28, 23, 21, 0.9);
+    --data-data_text-color: rgba(21, 28, 26, 0.9);
+    --data-data_text-color1: #b9bbba;
+
+    --data-amount-border-color: rgba(21, 28, 26, 0.2);
+
+
+
     --Utility-text-color: #151c1a;
     --Utility-title-color: rgba(21, 28, 26, 0.9);
     --Utility-item-img: linear-gradient(97deg,
             #f1f7f6 40%,
             rgba(164, 229, 221, 0.2) 100.1%);
-
     --Utility-item-border: none;
     --Utility-item-text: rgba(21, 28, 26, 0.7);
 
@@ -50,11 +57,12 @@
     --swiper-text-color1: #151C1A;
 
     --Contribute-lighter-box-shadow: 0px 1px 1px 1px #dfe7e6 inset;
-    --app-footer-right_text-hover: rgba(255, 255, 255, 1);
-
+    --Contribute-button_left-bg: none;
+    --Contribute-button_left-border: 1px solid #3edfcf;
 
 
     //! 底部导航栏
+    --app-footer-right_text-hover: rgba(255, 255, 255, 1);
     --app-footer-bgc: #f6f9f9;
     --app-footer-underline: rgba(28, 21, 21, 0.9);
     --app-footer-right_text: rgba(21, 28, 26, 0.9);
@@ -62,6 +70,16 @@
     --app-footer-social-brightness: brightness(0%);
     --app-footer-social-opacity: 0.17;
 
+
+
+    //! 中英文切换按钮
+    --app-header-icon-bgc: #151c1a;
+    --app-header-setlanguage_bgc: #fffefb;
+    --app-header-setlanguage_shadow: none;
+    --app-header-options-bg: #f6f9f9;
+    --app-header-options-shadow: none;
+    --app-header-options-color: #3edfcf;
+    --app-header-options-item-color: rgba(21, 28, 26, 0.9);
 
 }
 
@@ -84,7 +102,7 @@
     --where-button: #373737;
     --where-button-hover: rgba(255, 254, 251, 0.5);
     --where-button-hover-end: rgba(255, 254, 251, 0.5);
-    --where-button-shadow: rgba(255, 254, 251, 1);
+    --where-button-shadow: rgba(156, 255, 243, 0.3);
     --where-button-border: none;
     --where-button-color: rgba(255, 255, 255, 0.5);
 
@@ -93,6 +111,14 @@
     --circles-bg-round: rgba(255, 255, 255, 0);
     --circles-bg-round1: rgba(255, 255, 255, 0);
     --circles-point: #fff;
+
+    --data-amount-color: rgba(255, 255, 255, 0.8);
+    --data-data_text-color: rgba(62, 223, 207, 1);
+    --data-data_text-color1: rgba(62, 223, 207, 1);
+    --data-amount-border-color: rgba(62, 223, 207, 0.2);
+
+
+
 
     --Utility-text-color: rgba(255, 255, 255, 0.8);
     --Utility-title-color: #3EDFCF;
@@ -112,6 +138,8 @@
     --swiper-text-color1: rgba(255, 255, 255, 0.8);
 
     --Contribute-lighter-box-shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
+    --Contribute-button_left-bg: rgba(255, 255, 255, 0.3);
+    --Contribute-button_left-border: none;
 
 
     //! 底部导航栏
@@ -121,5 +149,17 @@
     --app-footer-right_text-hover: rgba(255, 255, 255, 1);
     --app-footer-social-brightness: brightness(100%);
     --app-footer-social-opacity: 1;
+
+
+
+    //! 中英文切换按钮
+    --app-header-icon-bgc: #fff;
+    --app-header-setlanguage_bgc: #151C1A;
+    --app-header-setlanguage_shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.50);
+    --app-header-options-bg: rgba(255, 254, 251, 0.50);
+    --app-header-options-shadow: 0px 4px 20px 0px rgba(156, 255, 243, 0.30);
+    --app-header-options-color: #fff;
+    --app-header-options-item-color: rgba(255, 255, 255, 0.4);
+
 
 }
