--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -1,11 +1,13 @@
 /* 默认的亮色主题样式 */
 :root {
-    --background-color: #ffffff;
+    --background-color: #fffefb;
+    --background-color-button: #ffffff;
 
     --text-color: #000000;
 
     --link-color: #0000ff;
 
+    --where-text: rgba(21, 28, 26, 0.9);
 
 
     // !home页面的主题样式
@@ -15,7 +17,6 @@
     --box-shadow-light: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
     --where-border: #fff;
     --where-bg: #fff;
-    --where-text: rgba(21, 28, 26, 0.9);
     --where-button: #fffefb;
     --where-button-hover: #fff;
     --where-button-hover-end: rgba(255, 255, 255, 0);
@@ -81,11 +82,25 @@
     --app-header-options-color: #3edfcf;
     --app-header-options-item-color: rgba(21, 28, 26, 0.9);
 
+
+
+    //! 新闻页面
+    --news-article_text_one-border: rgba(21, 28, 26, 0.1);
+
+
+    //! learning_center页面
+    --learning-center-what-bg: #fffefb;
+    --learning-center-what-bg1: rgba(62, 223, 207, 0);
+    --learning-center-what-shadow: rgba(228, 233, 232, 0.5);
+    --learning-center-brightness: 1;
+
 }
 
 /* 暗色主题样式 */
 .dark-theme {
     --background-color: #0c0c0c;
+    --background-color-button: #0c0c0c;
+
 
     --text-color: #FFFEFB;
 
@@ -162,4 +177,14 @@
     --app-header-options-item-color: rgba(255, 255, 255, 0.4);
 
 
+
+    //! 新闻页面
+    --news-article_text_one-border: rgba(255, 255, 255, 0.2);
+
+
+    //! learning_center页面
+    --learning-center-what-bg: #151C1A;
+    --learning-center-what-bg1: rgba(62, 223, 207, 0.1);
+    --learning-center-what-shadow: rgba(228, 233, 232, 0);
+    --learning-center-brightness: 100;
 }
