--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -94,6 +94,18 @@
     --learning-center-what-shadow: rgba(228, 233, 232, 0.5);
     --learning-center-brightness: 1;
 
+
+
+    //! poci_consensus页面
+    --poci_consensus-color: rgba(21, 28, 26, 0.06);
+
+
+    // ! middle_message_ introduce 页面
+    --middle_message_introduce-bg: #fffefa;
+
+
+    // ! docs页面
+    --docs-box-shadow-light: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
 }
 
 /* 暗色主题样式 */
@@ -187,4 +199,19 @@
     --learning-center-what-bg1: rgba(62, 223, 207, 0.1);
     --learning-center-what-shadow: rgba(228, 233, 232, 0);
     --learning-center-brightness: 100;
+
+
+
+    //! poci_consensus页面
+    --poci_consensus-color: rgba(255, 255, 255, 0.08);
+
+
+
+    // ! middle_message_ introduce 页面
+    --middle_message_introduce-bg: #0c0c0c;
+
+
+
+    // ! docs页面
+    --docs-box-shadow-light: 0px 1px 4px 0px rgba(228, 233, 232, 0.2);
 }
