--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -96,6 +96,9 @@
 
 
 
+    //! utility_explain 页面
+    --utility_explain-bgc: rgba(179, 236, 229, 1);
+
     //! poci_consensus页面
     --poci_consensus-color: rgba(21, 28, 26, 0.06);
 
@@ -164,7 +167,7 @@
     --swiper-text-color: rgba(62, 223, 207, 1);
     --swiper-text-color1: rgba(255, 255, 255, 0.8);
 
-    --Contribute-lighter-box-shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
+    --Contribute-lighter-box-shadow: 0px 4px 20px 0px rgba(228, 233, 232, 0.5);
     --Contribute-button_left-bg: rgba(255, 255, 255, 0.3);
     --Contribute-button_left-border: none;
 
@@ -199,6 +202,10 @@
     --learning-center-what-bg1: rgba(62, 223, 207, 0.1);
     --learning-center-what-shadow: rgba(228, 233, 232, 0);
     --learning-center-brightness: 100;
+
+
+    //! utility_explain 页面
+    --utility_explain-bgc: rgba(179, 236, 229, 0.6);
 
 
 
