--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -1,226 +1,324 @@
 /* 默认的亮色主题样式 */
 :root {
-    --background-color: #fffefb;
-    --background-color-button: #ffffff;
+        --background-color: #fffefb;
+        --background-color-button: #ffffff;
 
-    --text-color: #000000;
+        --text-color: #000000;
 
-    --link-color: #0000ff;
+        --link-color: #0000ff;
 
-    --where-text: rgba(21, 28, 26, 0.9);
-
-
-    // !home页面的主题样式
-    --where-color: rgba(21, 28, 26, 0.9);
-    --background-start: #fff;
-    --background-end: rgba(255, 255, 255, 0);
-    --box-shadow-light: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
-    --where-border: #fff;
-    --where-bg: #fff;
-    --where-button: #fffefb;
-    --where-button-hover: #fff;
-    --where-button-hover-end: rgba(255, 255, 255, 0);
-    --where-button-shadow: rgba(156, 255, 243, 0.5);
-    --where-button-border: #3EDFCF;
-    --where-button-option: 1;
-    --where-button-color: rgba(21, 28, 26, 0.9);
-
-    --circles-bg: #fffefb;
-    --circles-border: rgba(21, 28, 26, 0.1);
-    --circles-bg-round: #fffefb;
-    --circles-bg-round1: rgba(247, 247, 244, 1);
-    --circles-point: rgba(21, 28, 26, 0.9);
+        --where-text: rgba(21, 28, 26, 0.9);
 
 
-    --data-amount-color: rgba(28, 23, 21, 0.9);
-    --data-data_text-color: rgba(21, 28, 26, 0.9);
-    --data-data_text-color1: #b9bbba;
+        // !home页面的主题样式
+        --where-color: rgba(21, 28, 26, 0.9);
+        --background-start: #fff;
+        --background-end: rgba(255, 255, 255, 0);
+        --box-shadow-light: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
+        --where-border: #fff;
+        --where-bg: #fff;
+        --where-button: #fffefb;
+        --where-button-hover: #fff;
+        --where-button-hover-end: rgba(255, 255, 255, 0);
+        --where-button-shadow: rgba(156, 255, 243, 0.5);
+        --where-button-border: #3EDFCF;
+        --where-button-option: 1;
+        --where-button-color: rgba(21, 28, 26, 0.9);
 
-    --data-amount-border-color: rgba(21, 28, 26, 0.2);
-
-
-
-    --Utility-text-color: #151c1a;
-    --Utility-title-color: rgba(21, 28, 26, 0.9);
-    --Utility-item-img: linear-gradient(97deg,
-            #f1f7f6 40%,
-            rgba(164, 229, 221, 0.2) 100.1%);
-    --Utility-item-border: none;
-    --Utility-item-text: rgba(21, 28, 26, 0.7);
-
-    --swiper-icon-color: #000;
-    --swiper-time-color: #151c1a;
-    --swiper-prev-bg: rgba(21, 28, 26, 0.9);
-    --swiper-prev-disabled-bg: #fff;
-    --swiper-shadow-left: #fff;
-    --swiper-shadow-left1: rgba(255, 255, 255, 0);
-    --swiper-text-color: #151C1A;
-    --swiper-text-color1: #151C1A;
-
-    --Contribute-lighter-box-shadow: 0px 1px 1px 1px #dfe7e6 inset;
-    --Contribute-button_left-bg: none;
-    --Contribute-button_left-border: 1px solid #3edfcf;
+        --circles-bg: #fffefb;
+        --circles-border: rgba(21, 28, 26, 0.1);
+        --circles-bg-round: #fffefb;
+        --circles-bg-round1: rgba(247, 247, 244, 1);
+        --circles-point: rgba(21, 28, 26, 0.9);
 
 
-    //! 底部导航栏
-    --app-footer-right_text-hover: rgba(255, 255, 255, 1);
-    --app-footer-bgc: #f6f9f9;
-    --app-footer-underline: rgba(28, 21, 21, 0.9);
-    --app-footer-right_text: rgba(21, 28, 26, 0.9);
-    --app-footer-right_text-hover: rgba(21, 28, 26, 0.9);
-    --app-footer-social-brightness: brightness(0%);
-    --app-footer-social-opacity: 0.17;
+        --data-amount-color: rgba(28, 23, 21, 0.9);
+        --data-data_text-color: rgba(21, 28, 26, 0.9);
+        --data-data_text-color1: #b9bbba;
+
+        --data-amount-border-color: rgba(21, 28, 26, 0.2);
 
 
 
-    //! 中英文切换按钮
-    --app-header-icon-bgc: #151c1a;
-    --app-header-setlanguage_bgc: #fffefb;
-    --app-header-setlanguage_shadow: none;
-    --app-header-options-bg: #f6f9f9;
-    --app-header-options-shadow: none;
-    --app-header-options-color: #3edfcf;
-    --app-header-options-item-color: rgba(21, 28, 26, 0.9);
+        --Utility-text-color: #151c1a;
+        --Utility-title-color: rgba(21, 28, 26, 0.9);
+        --Utility-item-img: linear-gradient(97deg,
+                        #f1f7f6 40%,
+                        rgba(164, 229, 221, 0.2) 100.1%);
+        --Utility-item-border: none;
+        --Utility-item-text: rgba(21, 28, 26, 0.7);
+
+        --swiper-icon-color: #000;
+        --swiper-time-color: #151c1a;
+        --swiper-prev-bg: rgba(21, 28, 26, 0.9);
+        --swiper-prev-disabled-bg: #fff;
+        --swiper-shadow-left: #fff;
+        --swiper-shadow-left1: rgba(255, 255, 255, 0);
+        --swiper-text-color: #151C1A;
+        --swiper-text-color1: #151C1A;
+
+        --Contribute-lighter-box-shadow: 0px 1px 1px 1px #dfe7e6 inset;
+        --Contribute-button_left-bg: none;
+        --Contribute-button_left-border: 1px solid #3edfcf;
+
+
+        //! 底部导航栏
+        --app-footer-right_text-hover: rgba(255, 255, 255, 1);
+        --app-footer-bgc: #f6f9f9;
+        --app-footer-underline: rgba(28, 21, 21, 0.9);
+        --app-footer-right_text: rgba(21, 28, 26, 0.9);
+        --app-footer-right_text-hover: rgba(21, 28, 26, 0.9);
+        --app-footer-social-brightness: brightness(0%);
+        --app-footer-social-opacity: 0.17;
 
 
 
-    //! 新闻页面
-    --news-article_text_one-border: rgba(21, 28, 26, 0.1);
+        //! 中英文切换按钮
+        --app-header-icon-bgc: #151c1a;
+        --app-header-setlanguage_bgc: #fffefb;
+        --app-header-setlanguage_shadow: none;
+        --app-header-options-bg: #f6f9f9;
+        --app-header-options-shadow: none;
+        --app-header-options-color: #3edfcf;
+        --app-header-options-item-color: rgba(21, 28, 26, 0.9);
 
 
-    //! learning_center页面
-    --learning-center-what-bg: #fffefb;
-    --learning-center-what-bg1: rgba(62, 223, 207, 0);
-    --learning-center-what-shadow: rgba(228, 233, 232, 0.5);
-    --learning-center-brightness: 1;
+
+        //! 新闻页面
+        --news-article_text_one-border: rgba(21, 28, 26, 0.1);
 
 
 
-    //! utility_explain 页面
-    --utility_explain-bgc: rgba(179, 236, 229, 1);
-
-    //! poci_consensus页面
-    --poci_consensus-color: rgba(21, 28, 26, 0.06);
+        // ! middle_message_ introduce 页面
+        --middle_message_introduce-bg: #fffefa;
 
 
-    // ! middle_message_ introduce 页面
-    --middle_message_introduce-bg: #fffefa;
+
+        // !  unc_token页面
+        --unc_token-header-shadow: 0px 1px 1px 1px #dfe7e6 inset;
+        --unc_token-header-border: none;
+        --unc_token-subtitle-bg: linear-gradient(100deg,
+                        rgba(149, 235, 227, 0.17) 1.02%,
+                        rgba(149, 235, 227, 0) 38.87%);
+        --unc_token-subtitle-border: none;
+        --unc_token-subtitle-border1: none;
+
+        --unc_token-subtitle-shadow: none;
+
+        --unc_token-message_card_list-bgc: #f6f9f9;
+        --unc_token-message_card_list-hoverbg: #f6f9f9;
+        --unc_token-message_card_list-border: none;
+        --unc_token-options_item-bgc: linear-gradient(177deg,
+                        #fff -24.77%,
+                        rgba(255, 255, 255, 0) 97.53%);
+        --unc_token-options_item-border: 1px solid transparent;
 
 
-    // ! docs页面
-    --docs-box-shadow-light: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
+
+        //! utility_explain 页面
+        --utility_explain-bgc: rgba(179, 236, 229, 1);
+        --utility_explain-message-bgc: linear-gradient(90deg,
+                        rgba(207, 238, 235, 0) 25%,
+                        rgba(179, 236, 229, 0.17) 50%,
+                        var(--utility_explain-bgc) 25%);
+
+        --utility_explain-message-filter: none;
+        --utility_explain-message-position: 100%;
+        --utility_explain-options_item-border: 1px solid #d9d9d5;
+        --utility_explain-options_item-border1: 1px solid #000;
+
+
+
+        // ! docs页面
+        --docs-box-shadow-light: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
+        --docs-box-options_item-background: #fffefb;
+        --docs-box-options_item-background1: linear-gradient(90deg,
+                        #fffefb 49.96%,
+                        rgba(62, 223, 207, 1) 302.95%);
+        --docs-box-options_item-border: none;
+
+        //! learning_center页面
+        --learning-center-what-bg: #fffefb;
+        --learning-center-what-bg1: rgba(62, 223, 207, 0);
+        --learning-center-what-shadow: rgba(228, 233, 232, 0.5);
+        --learning-center-brightness: 1;
+        --learning-center-section_right-bg: linear-gradient(90deg,
+                        #fffefb 49.96%,
+                        rgba(62, 223, 207, 1) 302.95%);
+        --learning-center-section_right-border: 1px solid rgba(115, 255, 247, 0);
+
+
+
+        //! poci_consensus页面
+        --poci_consensus-color: rgba(21, 28, 26, 0.06);
+        --poci_consensus-options_list-bg: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/poci_consensus_options_hover.png") no-repeat;
+        --poci_consensus-options_list-bg1: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/poci_consensus_options_default.png") no-repeat;
+        --poci_faq-bg: #fffefb;
+        --poci_faq-bg1: #fffefb;
+        --poci_faq-color: rgba(21, 28, 26, 0.9);
+
+
 }
 
 /* 暗色主题样式 */
 .dark-theme {
-    --background-color: #0c0c0c;
-    --background-color-button: #0c0c0c;
 
 
-    --text-color: #FFFEFB;
-
-    --link-color: #0094ff;
-
-    // !home页面的主题样式
-    --where-color: #3EDFCF; // Where_to_Start
-    --background-start: #373737;
-    --background-end: #373737;
-    --box-shadow-light: none;
-    --where-border: #373737;
-    --where-bg: #151C1A;
-    --where-text: #fff;
-    --where-button: #373737;
-    --where-button-hover: rgba(255, 254, 251, 0.5);
-    --where-button-hover-end: rgba(255, 254, 251, 0.5);
-    --where-button-shadow: rgba(156, 255, 243, 0.3);
-    --where-button-border: none;
-    --where-button-color: rgba(255, 255, 255, 0.9);
-
-    --circles-bg: linear-gradient(227deg, rgba(62, 223, 207, 0.5) 14.49%, rgba(62, 223, 207, 0.00) 85.52%);
-    --circles-border: #3EDFCF;
-    --circles-bg-round: rgba(255, 255, 255, 0);
-    --circles-bg-round1: rgba(255, 255, 255, 0);
-    --circles-point: #fff;
-
-    --data-amount-color: rgba(255, 255, 255, 0.8);
-    --data-data_text-color: rgba(62, 223, 207, 1);
-    --data-data_text-color1: rgba(62, 223, 207, 1);
-    --data-amount-border-color: rgba(62, 223, 207, 0.2);
+        //! poci_consensus页面
+        --poci_consensus-color: rgba(255, 255, 255, 0.08);
+        --poci_consensus-options_list-bg: rgba(21, 28, 26, 0.90);
+        --poci_consensus-options_list-bg1: rgba(21, 28, 26, 0.90);
+        --poci_faq-bg: #0c0c0c;
+        --poci_faq-bg1: #3EDFCF;
+        --poci_faq-color: #0c0c0c;
 
 
 
 
-    --Utility-text-color: rgba(255, 255, 255, 0.8);
-    --Utility-title-color: #3EDFCF;
-    --Utility-item-img: none;
-    --Utility-item-border: 1px solid #38dac4;
-    --Utility-item-text: rgba(255, 255, 255, 0.7);
+        //! learning_center页面
+        --learning-center-what-bg: #151C1A;
+        --learning-center-what-bg1: rgba(62, 223, 207, 0.1);
+        --learning-center-what-shadow: rgba(228, 233, 232, 0);
+        --learning-center-brightness: 100;
+        --learning-center-section_right-bg: linear-gradient(90deg,
+                        #151C1A 49.96%,
+                        rgba(62, 223, 207, 0.1) 302.95%);
+        --learning-center-section_right-border: 1px solid #3edfcf;
 
 
 
-    --swiper-icon-color: rgba(106, 209, 197, 1);
-    --swiper-time-color: rgba(255, 255, 255, 0.8);
-    --swiper-prev-bg: rgba(255, 255, 255, 0.4);
-    --swiper-prev-disabled-bg: rgba(255, 255, 255, 0.2);
-    --swiper-shadow-left: rgba(10, 10, 10, 0.80);
-    --swiper-shadow-left1: rgba(10, 10, 10, 0.07);
-    --swiper-text-color: rgba(62, 223, 207, 1);
-    --swiper-text-color1: rgba(255, 255, 255, 0.8);
 
-    --Contribute-lighter-box-shadow: 0px 4px 20px 0px rgba(228, 233, 232, 0.5);
-    --Contribute-button_left-bg: rgba(255, 255, 255, 0.3);
-    --Contribute-button_left-border: none;
-
-
-    //! 底部导航栏
-    --app-footer-bgc: #1B1B1B;
-    --app-footer-underline: rgba(255, 255, 255, 0.8);
-    --app-footer-right_text: rgba(255, 255, 255, 0.6);
-    --app-footer-right_text-hover: rgba(255, 255, 255, 1);
-    --app-footer-social-brightness: brightness(100%);
-    --app-footer-social-opacity: 1;
+        // ! docs页面
+        --docs-box-shadow-light: 0px 1px 4px 0px rgba(228, 233, 232, 0.2);
+        --docs-box-options_item-background: #151C1A;
+        --docs-box-options_item-background1: #151C1A;
+        --docs-box-options_item-border: 1px solid transparent;
 
 
 
-    //! 中英文切换按钮
-    --app-header-icon-bgc: #fff;
-    --app-header-setlanguage_bgc: #151C1A;
-    --app-header-setlanguage_shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.50);
-    --app-header-options-bg: rgba(255, 254, 251, 0.50);
-    --app-header-options-shadow: 0px 4px 20px 0px rgba(156, 255, 243, 0.30);
-    --app-header-options-color: #fff;
-    --app-header-options-item-color: rgba(255, 255, 255, 0.4);
+
+        //! utility_explain 页面
+        --utility_explain-bgc: rgba(179, 236, 229, 0.6);
+        --utility_explain-message-bgc: linear-gradient(100deg, rgba(149, 235, 227, 0.17) 1.02%, rgba(149, 235, 227, 0.00) 38.87%);
+        --utility_explain-message-filter: blur(2.5px);
+        --utility_explain-message-position: 0;
+        --utility_explain-options_item-border: 1px dashed transparent;
+        --utility_explain-options_item-border1: 1px dashed #3EDFCF;
 
 
 
-    //! 新闻页面
-    --news-article_text_one-border: rgba(255, 255, 255, 0.2);
 
 
-    //! learning_center页面
-    --learning-center-what-bg: #151C1A;
-    --learning-center-what-bg1: rgba(62, 223, 207, 0.1);
-    --learning-center-what-shadow: rgba(228, 233, 232, 0);
-    --learning-center-brightness: 100;
+        // !  unc_token页面
+        --unc_token-header-shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.50);
+        --unc_token-header-border: 1px solid #3EDFCF;
+        --unc_token-subtitle-bg: #151C1A;
+        --unc_token-subtitle-border: 1px solid #151c1a;
+        --unc_token-subtitle-border1: 1px solid #3edfcf;
+        --unc_token-subtitle-shadow: 0px 2px 10px 0px rgba(228, 233, 232, 0.5);
+        --unc_token-message_card_list-bgc: linear-gradient(100deg, rgba(149, 235, 227, 0.17) 1.02%, rgba(149, 235, 227, 0.00) 38.87%);
+        --unc_token-message_card_list-border: 1px solid rgba(62, 223, 207, 0.5);
+        --unc_token-message_card_list-hoverbg: linear-gradient(260deg,
+                        rgba(149, 235, 227, 0.17) 1.02%,
+                        rgba(149, 235, 227, 0) 38.87%);
 
-
-    //! utility_explain 页面
-    --utility_explain-bgc: rgba(179, 236, 229, 0.6);
-
-
-
-    //! poci_consensus页面
-    --poci_consensus-color: rgba(255, 255, 255, 0.08);
-
-
-
-    // ! middle_message_ introduce 页面
-    --middle_message_introduce-bg: #0c0c0c;
+        --unc_token-options_item-bgc: linear-gradient(11deg, rgba(98, 206, 207, 0.3) -42.45%, rgba(176, 216, 219, 0.3) 69.99%);
+        --unc_token-options_item-border: 1px solid rgba(62, 223, 207, 0.3);
 
 
 
-    // ! docs页面
-    --docs-box-shadow-light: 0px 1px 4px 0px rgba(228, 233, 232, 0.2);
+
+        --background-color: #0c0c0c;
+        --background-color-button: #0c0c0c;
+
+
+        --text-color: #FFFEFB;
+
+        --link-color: #0094ff;
+
+        // !home页面的主题样式
+        --where-color: #3EDFCF; // Where_to_Start
+        --background-start: #373737;
+        --background-end: #373737;
+        --box-shadow-light: none;
+        --where-border: #373737;
+        --where-bg: #151C1A;
+        --where-text: #fff;
+        --where-button: #373737;
+        --where-button-hover: rgba(255, 254, 251, 0.5);
+        --where-button-hover-end: rgba(255, 254, 251, 0.5);
+        --where-button-shadow: rgba(156, 255, 243, 0.3);
+        --where-button-border: none;
+        --where-button-color: rgba(255, 255, 255, 0.9);
+
+        --circles-bg: linear-gradient(227deg, rgba(62, 223, 207, 0.5) 14.49%, rgba(62, 223, 207, 0.00) 85.52%);
+        --circles-border: #3EDFCF;
+        --circles-bg-round: rgba(255, 255, 255, 0);
+        --circles-bg-round1: rgba(255, 255, 255, 0);
+        --circles-point: #fff;
+
+        --data-amount-color: rgba(255, 255, 255, 0.8);
+        --data-data_text-color: rgba(62, 223, 207, 1);
+        --data-data_text-color1: rgba(62, 223, 207, 1);
+        --data-amount-border-color: rgba(62, 223, 207, 0.2);
+
+
+
+
+        --Utility-text-color: rgba(255, 255, 255, 0.8);
+        --Utility-title-color: #3EDFCF;
+        --Utility-item-img: none;
+        --Utility-item-border: 1px solid #38dac4;
+        --Utility-item-text: rgba(255, 255, 255, 0.7);
+
+
+
+        --swiper-icon-color: rgba(106, 209, 197, 1);
+        --swiper-time-color: rgba(255, 255, 255, 0.8);
+        --swiper-prev-bg: rgba(255, 255, 255, 0.4);
+        --swiper-prev-disabled-bg: rgba(255, 255, 255, 0.2);
+        --swiper-shadow-left: rgba(10, 10, 10, 0.80);
+        --swiper-shadow-left1: rgba(10, 10, 10, 0.07);
+        --swiper-text-color: rgba(62, 223, 207, 1);
+        --swiper-text-color1: rgba(255, 255, 255, 0.8);
+
+        --Contribute-lighter-box-shadow: 0px 4px 20px 0px rgba(228, 233, 232, 0.5);
+        --Contribute-button_left-bg: rgba(255, 255, 255, 0.3);
+        --Contribute-button_left-border: none;
+
+
+        //! 底部导航栏
+        --app-footer-bgc: #1B1B1B;
+        --app-footer-underline: rgba(255, 255, 255, 0.8);
+        --app-footer-right_text: rgba(255, 255, 255, 0.6);
+        --app-footer-right_text-hover: rgba(255, 255, 255, 1);
+        --app-footer-social-brightness: brightness(100%);
+        --app-footer-social-opacity: 1;
+
+
+
+        //! 中英文切换按钮
+        --app-header-icon-bgc: #fff;
+        --app-header-setlanguage_bgc: #151C1A;
+        --app-header-setlanguage_shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.50);
+        --app-header-options-bg: rgba(255, 254, 251, 0.50);
+        --app-header-options-shadow: 0px 4px 20px 0px rgba(156, 255, 243, 0.30);
+        --app-header-options-color: #fff;
+        --app-header-options-item-color: rgba(255, 255, 255, 0.4);
+
+
+
+        //! 新闻页面
+        --news-article_text_one-border: rgba(255, 255, 255, 0.2);
+
+
+
+
+
+        // ! middle_message_ introduce 页面
+        --middle_message_introduce-bg: #0c0c0c;
+
+
 
 
 
