--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -12,7 +12,7 @@
 
         // !home页面的主题样式
         --where-color: rgba(21, 28, 26, 0.9);
-        --background-start: #fff;
+        --background-start: #--background-start;
         --background-end: rgba(255, 255, 255, 0);
         --box-shadow-light: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
         --where-border: #fff;
@@ -48,7 +48,8 @@
         --Utility-item-border: none;
         --Utility-item-text: rgba(21, 28, 26, 0.7);
 
-        --swiper-icon-color: #000;
+        --swiper-icon-color: #000000;
+        --swiper-icon-color1: #000000;
         --swiper-time-color: #151c1a;
         --swiper-prev-bg: rgba(21, 28, 26, 0.9);
         --swiper-prev-disabled-bg: #fff;
@@ -86,7 +87,10 @@
 
         //! 新闻页面
         --news-article_text_one-border: rgba(21, 28, 26, 0.1);
-
+        --swiper-prev-new-bg: rgba(21, 28, 26, 0.9);
+        --swiper-prev-new-border: #000;
+        --swiper-prev-new-disabled-bg: #fff;
+        --swiper-prev-new-prev-bg: #000;
 
 
         // ! middle_message_ introduce 页面
@@ -157,11 +161,43 @@
         --poci_faq-bg1: #fffefb;
         --poci_faq-color: rgba(21, 28, 26, 0.9);
 
+        //! community页面
+        --community-bg: #fffefb;
+        --community-bg1: #ecf5f7;
+        --community-bg2: #e2f2f5;
+        --community-swiper-bg: #fff;
+        --community-swiper-shadow: none;
+        --community-community_options-bg: #fffefb;
+        --community-community_options-shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.5);
+        --community-community_options-shadow1: none;
+        --community-toggle_menu_list_item-bg: linear-gradient(177deg,
+                        #fffefb -24.77%,
+                        rgba(255, 255, 255, 0) 97.53%);
+        --community-steps_item-border: rgba(21, 28, 26, 0.1);
+        --community-message_text-bg: linear-gradient(177deg,
+                        #fff -24.77%,
+                        rgba(255, 255, 255, 0) 97.53%);
 
 }
 
 /* 暗色主题样式 */
 .dark-theme {
+
+
+        //! community页面
+        --community-bg: #171717;
+        --community-bg1: #171717;
+        --community-bg2: #171717;
+        --community-swiper-bg: #151C1A;
+        --community-swiper-shadow: 0px -4px 10px 0px #585858;
+        --community-community_options-bg: #151C1A;
+
+        --community-community_options-shadow: none;
+        --community-community_options-shadow1: 0px 4px 24px 0px rgba(228, 233, 232, 0.50);
+        --community-toggle_menu_list_item-bg: rgba(21, 28, 26, 0.90);
+        --community-steps_item-border: rgba(255, 254, 251, 0.2);
+        --community-message_text-bg: rgba(21, 28, 26, 0.90);
+
 
 
         //! poci_consensus页面
@@ -274,6 +310,7 @@
 
 
         --swiper-icon-color: rgba(106, 209, 197, 1);
+        --swiper-icon-color1: rgba(21, 28, 26, 1);
         --swiper-time-color: rgba(255, 255, 255, 0.8);
         --swiper-prev-bg: rgba(255, 255, 255, 0.4);
         --swiper-prev-disabled-bg: rgba(255, 255, 255, 0.2);
@@ -311,8 +348,11 @@
         //! 新闻页面
         --news-article_text_one-border: rgba(255, 255, 255, 0.2);
 
+        --swiper-prev-new-bg: #0c0c0c;
+        --swiper-prev-new-border: #fff;
 
-
+        --swiper-prev-new-disabled-bg: #000;
+        --swiper-prev-new-prev-bg: rgba(106, 209, 197, 1);
 
 
         // ! middle_message_ introduce 页面
