--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -190,10 +190,43 @@
                         #fffefb -24.77%,
                         rgba(255, 255, 255, 0) 97.53%);
         --community-toggle_menu_list_item-transform: -10px;
+
+
+
+
+
+
+
+        --unc-token-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_unc_token.png") no-repeat;
+        --docs-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/svgs/m_Background.svg") no-repeat;
+        --utility_explain-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_utility_explain.png") no-repeat;
+        --community-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_community.png") no-repeat;
+        --poci_consensus-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_poci.png") no-repeat;
+        --learning_center-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_learning_center.png") no-repeat;
+        --middle_message_introduce-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_learning_center.png") no-repeat;
+        --mp_ai_model-bgc-phone: url("@/assets/images/normal.png") no-repeat;
+        --mp_utility_wallet-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_wallet_logo.png") no-repeat;
+        --mp_hashing_power-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_power_logo.png") no-repeat;
+        --mp_mining_tool-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_tool_logo.png") no-repeat;
+        --mp_ai_model-icon-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_model_logo.png") no-repeat;
 }
 
 /* 暗色主题样式 */
 .dark-theme {
+
+        --unc-token-bgc-phone: url("@/assets/images/phone_unc_token-dark.png") no-repeat;
+        --docs-bgc-phone: #000;
+        --utility_explain-bgc-phone: url("@/assets/images/utility_explain-dark.png") no-repeat;
+        --community-bgc-phone: url("@/assets/images/phone_community-dark.png") no-repeat;
+        --poci_consensus-bgc-phone: url("@/assets/images/poci_consensus-dark.png") no-repeat;
+        --learning_center-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
+        --middle_message_introduce-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
+        --mp_ai_model-bgc-phone: url("@/assets/images/same.png") no-repeat;
+        --mp_utility_wallet-bgc-phone: url("@/assets/images/mp_utility_wallet.png") no-repeat;
+        --mp_hashing_power-bgc-phone: url("@/assets/images/mp_hashing_power.png") no-repeat;
+        --mp_mining_tool-bgc-phone: url("@/assets/images/mp_mining_tool.png") no-repeat;
+        --mp_ai_model-icon-bgc-phone: url("@/assets/images/mp_ai_model.png") no-repeat;
+
 
 
         //! community页面
