--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -196,12 +196,19 @@
 
 
 
-
+        --unc-token-bgc: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/unc_token_background.png") no-repeat;
         --unc-token-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_unc_token.png") no-repeat;
+
+        --docs-bgc: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/docs_background.png") no-repeat;
         --docs-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/svgs/m_Background.svg") no-repeat;
+
+        --utility_explain-bgc: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/utility_explain.png") no-repeat;
         --utility_explain-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_utility_explain.png") no-repeat;
+
         --community-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_community.png") no-repeat;
+        --poci_consensus-bgc: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/poci_consensus_background.png") no-repeat;
         --poci_consensus-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_poci.png") no-repeat;
+
         --learning_center-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_learning_center.png") no-repeat;
         --middle_message_introduce-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_learning_center.png") no-repeat;
         --mp_ai_model-bgc-phone: url("@/assets/images/normal.png") no-repeat;
@@ -214,10 +221,15 @@
 /* 暗色主题样式 */
 .dark-theme {
 
+        --unc-token-bgc: url("@/assets/images/unc_token_background.png") no-repeat;
         --unc-token-bgc-phone: url("@/assets/images/phone_unc_token-dark.png") no-repeat;
+        --docs-bgc: #141817;
         --docs-bgc-phone: #000;
+        --utility_explain-bgc: url("@/assets/images/utility_explain.png") no-repeat;
         --utility_explain-bgc-phone: url("@/assets/images/utility_explain-dark.png") no-repeat;
+
         --community-bgc-phone: url("@/assets/images/phone_community-dark.png") no-repeat;
+        --poci_consensus-bgc: url("@/assets/images/poci_consensus_background.png") no-repeat;
         --poci_consensus-bgc-phone: url("@/assets/images/poci_consensus-dark.png") no-repeat;
         --learning_center-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
         --middle_message_introduce-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
