--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -295,7 +295,7 @@
 
 
         //! utility_explain 页面
-        --utility_explain-bgc: rgba(179, 236, 229, 0.6);
+        // --utility_explain-bgc: rgba(179, 236, 229, 0.6);
         --utility_explain-message-bgc: linear-gradient(100deg, rgba(149, 235, 227, 0.17) 1.02%, rgba(149, 235, 227, 0.00) 38.87%);
         --utility_explain-message-bgc1: #151C1A;
         --utility_explain-message-filter: blur(2.5px);
