--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -5,14 +5,12 @@
 
         --text-color: #000000;
 
-        --link-color: #0000ff;
-
         --where-text: rgba(21, 28, 26, 0.9);
 
 
         // !root home页面的主题样式
         --where-color: rgba(21, 28, 26, 0.9);
-        --background-start: #--background-start;
+        --background-start: #fff;
         --background-end: rgba(255, 255, 255, 0);
         --box-shadow-light: 0px 0px 12px 3px rgba(206, 206, 206, 0.292);
         --where-border: #fff;
@@ -396,7 +394,7 @@
 
         --text-color: #FFFEFB;
 
-        --link-color: #0094ff;
+
 
         // !home页面的主题样式
         --where-color: #3EDFCF; // Where_to_Start
