--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -9,6 +9,7 @@
 
 
         // !root home页面的主题样式
+        --home-star-bg: url("@/assets/images/star_bg.png") no-repeat;
         --where-color: rgba(21, 28, 26, 0.9);
         --background-start: #fff;
         --background-end: rgba(255, 255, 255, 0);
@@ -30,7 +31,7 @@
         --circles-point: rgba(21, 28, 26, 0.9);
 
 
-        --data-amount-color: rgba(28, 23, 21, 0.9);
+        --data-amount-color: #849b96;
         --data-data_text-color: rgba(21, 28, 26, 0.9);
         --data-data_text-color1: #b9bbba;
 
@@ -252,10 +253,46 @@
         --poci-bgc: none;
         // ~ 手机端 end  ----------------------------------------------------------------------------------------------------------------------------------------------------
 
+
+
+        // *  second   ------- start  ----------------------------------------------------------------------------------------------------------------------------------------------------
+        --second-home-data_value-bg: linear-gradient(158deg,
+                        rgba(255, 255, 255, 0.4) 3.78%,
+                        rgba(255, 255, 255, 0) 100.78%);
+
+        --second-home-data_value-shadow: 0px 2px 10px 5px #ecf7f7;
+        --second-home-data_value-filter: drop-shadow(0px 6px 20px rgba(213, 237, 235, 0.4));
+        --second-home-Star_text-color: #3edfcf;
+        --second-home-Star_line-background: linear-gradient(270deg,
+                        rgba(139, 255, 248, 0) -1.12%,
+                        #8bfff8 45.98%,
+                        rgba(139, 255, 248, 0) 97.01%);
+
+        --second-phone-home-data_value-bg: url('@/assets/images/star_bg_phone.png') no-repeat;
+
+        // *  second   ------- end  ----------------------------------------------------------------------------------------------------------------------------------------------------
+
 }
 
 /* 暗色主题样式 */
 .dark-theme {
+        // *  second   ------- start  ----------------------------------------------------------------------------------------------------------------------------------------------------
+
+        --second-home-data_value-bg: linear-gradient(158deg,
+                        rgba(11, 12, 12, 0.7) 3.78%,
+                        rgba(11, 12, 12, 0) 100.78%);
+        --second-home-data_value-shadow: 0px 6px 5px 0px rgba(84, 133, 125, 0.2),
+                inset 0px 2px 2px 0px #54857d;
+
+        --second-home-data_value-filter: drop-shadow(0px 6px 14px rgba(189, 237, 234, 0.2));
+        --second-home-Star_text-color: #F6F9F9;
+        --second-home-Star_line-background: linear-gradient(270deg,
+                        rgba(255, 255, 255, 0) -1.37%,
+                        #fff 49.95%,
+                        rgba(255, 255, 255, 0) 100.26%);
+
+        --second-phone-home-data_value-bg: url('@/assets/images/star_bg_dark_phone.png') no-repeat;
+        // * second   ------- end  ----------------------------------------------------------------------------------------------------------------------------------------------------
         // ~ 手机端 start   ----------------------------------------------------------------------------------------------------------------------------------------------------
         // ^ unc_token
         --unc_token-header_content-shadow: 0px 1px 1px 1px rgba(223, 231, 230, 0.4) inset;
@@ -397,6 +434,8 @@
 
 
         // !home页面的主题样式
+        --home-star-bg: url("@/assets/images/star_bg_black.png") no-repeat;
+
         --where-color: #3EDFCF; // Where_to_Start
         --background-start: #373737;
         --background-end: #373737;
@@ -417,8 +456,8 @@
         --circles-bg-round1: rgba(255, 255, 255, 0);
         --circles-point: #fff;
 
-        --data-amount-color: rgba(255, 255, 255, 0.8);
-        --data-data_text-color: rgba(62, 223, 207, 1);
+        --data-amount-color: #FFFEFB;
+        --data-data_text-color: rgba(255, 254, 251, 0.7);
         --data-data_text-color1: rgba(62, 223, 207, 1);
         --data-amount-border-color: rgba(62, 223, 207, 0.2);
 
