--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -63,6 +63,9 @@
         --Contribute-lighter-box-shadow1: 0px 1px 1px 1px #dfe7e6 inset;
         --Contribute-button_left-bg: none;
         --Contribute-button_left-border: 1px solid #3edfcf;
+        --home-card-bgc: linear-gradient(177deg, #FFF -24.77%, rgba(255, 255, 255, 0.00) 97.53%);
+        --home-card-bgc-hover: #F6F9F9;
+        --home-card-bgc-show: 0px 4px 24px 0px rgba(228, 233, 232, 0.50);
 
 
         //!root 底部导航栏
@@ -445,6 +448,9 @@
                 0px 4px 14px 0px rgba(228, 233, 232, 0.4);
         --Contribute-button_left-bg: rgba(255, 255, 255, 0.3);
         --Contribute-button_left-border: none;
+        --home-card-bgc:  linear-gradient(124deg, #424848 16.97%, rgba(16, 21, 21, 0.00) 93.94%);
+        --home-card-bgc-hover:  #f6f9f90e;
+        --home-card-bgc-show: 0px 4px 24px 0px rgba(228, 233, 232, 0);
 
 
         //! 底部导航栏
