--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -4,6 +4,7 @@
         --background-color-button: #ffffff;
 
         --text-color: #000000;
+        --text-color1: #000000;
 
         --where-text: rgba(21, 28, 26, 0.9);
 
@@ -64,6 +65,7 @@
         --Contribute-button_left-border: 1px solid #3edfcf;
         --home-card-bgc: linear-gradient(177deg, #FFF -24.77%, rgba(255, 255, 255, 0.00) 97.53%);
         --home-card-bgc-hover: #F6F9F9;
+        --home-card-bgc-btn:   rgba(246, 249, 249, 0.40);
         --home-card-bgc-show: 0px 4px 24px 0px rgba(228, 233, 232, 0.50);
 
 
@@ -433,7 +435,7 @@
 
 
         --text-color: #FFFEFB;
-
+        --text-color1: #3EDFCF;
 
 
         // !home页面的主题样式
@@ -491,8 +493,9 @@
                 0px 4px 14px 0px rgba(228, 233, 232, 0.4);
         --Contribute-button_left-bg: rgba(255, 255, 255, 0.3);
         --Contribute-button_left-border: none;
-        --home-card-bgc:  linear-gradient(124deg, #424848 16.97%, rgba(16, 21, 21, 0.00) 93.94%);
+        --home-card-bgc:  linear-gradient(124deg, #4248482b 16.97%, rgba(16, 21, 21, 0) 93.94%);
         --home-card-bgc-hover:  #f6f9f90e;
+        --home-card-bgc-btn:   rgba(246, 249, 249, 0.40);
         --home-card-bgc-show: 0px 4px 24px 0px rgba(228, 233, 232, 0);
 
 
