--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -348,10 +348,10 @@
         --learning_center-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
         --middle_message_introduce-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
         --mp_ai_model-bgc-phone: url("@/assets/images/same.png") no-repeat;
-        --mp_utility_wallet-bgc-phone: url("@/assets/images/mp_utility_wallet.png") no-repeat;
-        --mp_hashing_power-bgc-phone: url("@/assets/images/mp_hashing_power.png") no-repeat;
-        --mp_mining_tool-bgc-phone: url("@/assets/images/mp_mining_tool.png") no-repeat;
-        --mp_ai_model-icon-bgc-phone: url("@/assets/images/mp_ai_model.png") no-repeat;
+        --mp_utility_wallet-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_utility_wallet.png") no-repeat;
+        --mp_hashing_power-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_hashing_power.png") no-repeat;
+        --mp_mining_tool-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_mining_tool.png") no-repeat;
+        --mp_ai_model-icon-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_ai_model.png") no-repeat;
 
 
 
