--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -422,7 +422,7 @@
 
 
         // !  unc_token页面
-        --unc_token-header-shadow: 0px 0px 16px 8px rgba(255, 255, 255, 0.123);
+        --unc_token-header-shadow:0px 1px 4px 0px rgba(255, 255, 255, 0.20) inset;
         --unc_token-header-shadow-new: 0px 4px 0px 0px rgba(255, 254, 251, 0.4) inset,
                 0px 4px 24px 0px rgba(228, 233, 232, 0.3);
         --unc_token-header-border: 1px solid #3EDFCF;
@@ -504,7 +504,7 @@
         --swiper-text-color1: rgba(255, 255, 255, 0.8);
 
         --Contribute-lighter-box-filter: 4px;
-        --Contribute-lighter-box-shadow: 0px 0px 12px 3px rgba(255, 255, 255, 0.292);
+        --Contribute-lighter-box-shadow: 0px 4px 24px 0px rgba(228, 233, 232, 0.049);
         --Contribute-lighter-box-shadow1: 0px 1px 1px 1px rgba(223, 231, 230, 0.2) inset,
                 0px 4px 14px 0px rgba(228, 233, 232, 0.4);
         --Contribute-button_left-bg: rgba(255, 255, 255, 0.3);
