--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -295,10 +295,14 @@
 
         --Create_a_lighter-filter: blur(4px);
         --button_right-shadow: 0px 4px 20px 0px rgba(156, 255, 243, 0.3);
+        --section_side_opacity-bgc: linear-gradient(177deg, #fff -24.77%, rgba(255, 255, 255, 0) 97.53%);
 }
 
 /* 暗色主题样式 */
 .dark-theme {
+        --section_side_opacity-bgc: linear-gradient(177deg,
+                        #3d534e -24.77%,
+                        rgba(255, 255, 255, 0) 97.53%);
         --button_right-shadow: none;
 
         --Create_a_lighter-filter: blur(7.5px);
