--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -295,14 +295,19 @@
 
         --Create_a_lighter-filter: blur(4px);
         --button_right-shadow: 0px 4px 20px 0px rgba(156, 255, 243, 0.3);
-        --section_side_opacity-bgc: linear-gradient(177deg, #fff -24.77%, rgba(255, 255, 255, 0) 97.53%);
+        --section_side_opacity-bgc: linear-gradient(177deg, #fff -24.77%, rgba(255, 255, 255, 0) 7.53%);
+        --learning_center-header-bg: url("@/assets/images/learning_center_background.png");
+
+
 }
 
 /* 暗色主题样式 */
 .dark-theme {
+        --learning_center-header-bg: url("@/assets/images/learning_center.png");
+
         --section_side_opacity-bgc: linear-gradient(177deg,
-                        #3d534e -24.77%,
-                        rgba(255, 255, 255, 0) 97.53%);
+                        #3d534e 34.77%,
+                        rgba(255, 255, 255, 0) 99.53%);
         --button_right-shadow: none;
 
         --Create_a_lighter-filter: blur(7.5px);
