--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -163,7 +163,7 @@
 
         //!root learning_center页面
         --learning-center-what-bg: #fffefb;
-        --learning-center-what-bg1: rgba(62, 223, 207, 0);
+        --learning-center-what-bg1: #fffefb;
         --learning-center-what-shadow: rgba(228, 233, 232, 0.5);
         --learning-center-brightness: 1;
         --learning-center-section_right-bg: linear-gradient(90deg,
@@ -422,8 +422,8 @@
 
 
         //! learning_center页面
-        --learning-center-what-bg: #151C1A;
-        --learning-center-what-bg1: rgba(62, 223, 207, 0.1);
+        --learning-center-what-bg: rgba(21, 28, 26);
+        --learning-center-what-bg1: rgba(21, 28, 26);
         --learning-center-what-shadow: rgba(228, 233, 232, 0);
         --learning-center-brightness: 100;
         --learning-center-section_right-bg: linear-gradient(90deg,
