--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -1,5 +1,10 @@
 /* 默认的亮色主题样式 */
 :root {
+
+        --topnav-background-color: #fffefb;
+
+
+        
         --background-color: #fffefb;
         --background-color-button: #ffffff;
 
@@ -7,6 +12,7 @@
         --text-color1: #000000;
 
         --where-text: rgba(21, 28, 26, 0.9);
+        --where-text-c: rgba(21, 28, 26, 0.9);
 
 
         // !root home页面的主题样式
@@ -308,6 +314,8 @@
 
 /* 暗色主题样式 */
 .dark-theme {
+        --topnav-background-color: #333333;
+
         --learning_center-header-bg-color: rgba(0, 0, 0, 0.7);
 
         --background-header_content_button: linear-gradient(113deg, #ca00c1 4.34%, #00f7e4 92.98%);
@@ -500,6 +508,7 @@
         --where-border: #373737;
         --where-bg: #151C1A;
         --where-text: #fff;
+        --where-text-c: #cbcac5;
         --where-button: #373737;
         --where-button-hover: rgba(255, 254, 251, 0.5);
         --where-button-hover-end: rgba(255, 254, 251, 0.5);
